--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -4,12 +4,18 @@
     background-color: #f5f5f5;
     padding: 10px;
     border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 
 #display-container{
     text-align: right;
-    min-height: 100px;
+    min-height: 70px;
+    padding: 20px;
+    p{
+        margin: 0;
+        padding: 0;
+    }
     #display{
         font-size: 30px;
         font-weight: 500;
@@ -23,11 +29,16 @@
     grid-gap: 10px;
     .wide{
         grid-column: span 2;
-    }
-    .extra-wide{
-        grid-column: span 3;
+        color: #C44CF4;
+        font-weight: 700;
+        font-size: larger;
     }
     button{
         border-radius: 30px;
+        border: none;    
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+        :hover{
+            cursor: pointer;
+        }
     }
 }
